--- a/crypto-check/config.json
+++ b/crypto-check/config.json
@@ -1,5 +1,6 @@
 {
     "api_url": "https://api.binance.com/api/v3/ticker/price?symbol=",
     "symbols": ["BTCUSDT", "ETHUSDT", "SOLUSDT", "BNBUSDT", "DOGEUSDT"],
-    "update_interval": 5
+    "update_interval": 5,
+    "alert_threshold": 5.0
 }
